--- a/templates/show_hotels.html
+++ b/templates/show_hotels.html
@@ -18,19 +18,17 @@
     {% endif %}
 {% endwith %}
 
-<section class="lay-content hero-banner-wrap">
+<!--<section class="lay-content hero-banner-wrap">
     <div class="hero-banner">
       <div class="hero-text"></div>
       <div class="hero-banner-box">
       </div>
     </div>
-</section>
+</section> -->
+
 
 <section class="main-div">
-</section>
-
-<section class="sidebar">
-    <h1 class="subtitle">Lodgings</h1>
+    <h1 class="title">Lodgings</h1>
     <ul>
     {% for hotel in hotels %}
         <li>
