--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,23 @@
 
         <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+        <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
+        <html itemscope itemtype="http://schema.org/Article">
+        <meta name="Description" content="Login page for Yamagata Hotels; Description: Hotel and lodging listings, Location: Yamagata Yamagata Japan">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer></script>
+        <!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
+        <script>
+          function start() {
+            gapi.load('auth2', function() {
+              auth2 = gapi.auth2.init({
+                client_id: '936000743443-1lb8midi1epefonrqg2r55cdoiag0tgg.apps.googleusercontent.com',
+                // Scopes to request in addition to 'profile' and 'email'
+                //scope: 'additional_scope'
+              });
+            });
+          }
+        </script>
 
         {% block head %}
         {% endblock %}
@@ -36,6 +53,40 @@
         </footer>
         {% block scripts %}
         {% endblock %}
+        <script>
+        function signInCallback(authResult) {
+          if (authResult['code']) {
+
+            // Hide the sign-in button now that the user is authorized, for example:
+            $('#signinButton').attr('style', 'display: none');
+
+            // Send the code to the server
+            $.ajax({
+              type: 'POST',
+              url: '/gconnect?state={{STATE}}',
+              // Always include an `X-Requested-With` header in every AJAX request,
+              // to protect against CSRF attacks.
+              headers: {
+                'X-Requested-With': 'XMLHttpRequest'
+              },
+              contentType: 'application/octet-stream; charset=utf-8',
+              success: function(result) {
+                  if (result) {
+                    $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+                   setTimeout(function() {
+                    window.location.href = "/hotels";
+                }, 4000);}
+              },
+              processData: false,
+              data: authResult['code']
+            });
+          } else if (authResult['error']) {
+            console.log('There was an error: ' + authResult['error']);
+          } else {
+                $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+                 }
+        }
+        </script>
         <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
