Fix hotel categories link typo

--- a/templates/header.html
+++ b/templates/header.html
@@ -15,7 +15,7 @@
             <ul class="nav link-container"><!--
             --><li class="link-container__link-wrapper"><a href="{{ url_for('showHotels', hotels=hotels) }}" class="link-container__link"><span class="link-container__link__text">Home</span></a></li><!--
             --><li class="link-container__link-wrapper"><a href="{{ url_for('newHotel') }}" class="link-container__link"><span class="link-container__link__text">Add A Lodging</span></a></li><!--
-            --><li class="link-container__link-wrapper"><a href="{{ url_for('showHotelsCategories') }}" class="link-container__link"><span class="link-container__link__text">Types of Lodgings</span></a></li><!--
+            --><li class="link-container__link-wrapper"><a href="{{ url_for('showHotelCategories') }}" class="link-container__link"><span class="link-container__link__text">Types of Lodgings</span></a></li><!--
             --><hr id="nav_slide_hover" class="link-container__highlight" style="width: 17.6152%; margin-left: 0%;">
             </ul>
         </nav>
