--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,8 @@
 <section class="signin-section">
     {% if 'username' not in session %}
     <div class="signin-box">
-        <h1 class="signin-title">Signin</h1>
+        <img src="/static/img/basho_logo.svg" class="signin-logo" alt="basho logo" title="basho">
+        <h2 class="signin-title">Sign in</h2>
         <button id="signinButton" class="btn signin-btn hotels-btn">Sign in with Google</button>
     </div>
 
