--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,7 @@ html {
 
 body {
   background-color: #fff;
-  color: #000;
+  color: #373338;
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 0;
@@ -80,6 +80,7 @@ img {
 
 .btn {
   border: 2px solid;
+  font-weight: 600;
   height: 40px; }
   .btn:active {
     transform: translate(2px, 2px); }
@@ -194,7 +195,7 @@ img {
   margin-top: 100px; }
 
 .ftr {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(55, 51, 56, 0.7);
   bottom: 0;
   position: fixed;
   width: 100%;
@@ -225,30 +226,44 @@ img {
   background-color: #fde0ff;
   border-radius: 3px;
   box-shadow: 1px 1px 3px 1px #595454;
-  color: #000;
-  display: flex;
+  color: #373338;
+  display: block;
   height: 400px;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
   position: relative;
   text-align: center;
-  top: 50px;
+  top: 70px;
   width: 310px; }
+
+.signin-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  top: -20px;
+  width: 200px; }
+
+.signin-title {
+  color: #373338;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  text-align: center;
+  top: 60px; }
 
 .signin-btn {
   background-color: #498fff;
+  background-image: linear-gradient(#498fff, #427bd6);
+  background-repeat: repeat-x;
   border: 0;
+  border-color: #427bd6;
   box-shadow: 1px 1px 1px #595454;
   color: #fff;
   position: relative;
-  top: 300px; }
-
-.signin-title {
-  color: #000;
-  position: absolute;
-  text-align: center;
-  top: 120px; }
+  top: 200px; }
 
 @media screen and (min-width: 600px) {
   .header-dropdown__hamburger {
