--- a/templates/header.html
+++ b/templates/header.html
@@ -8,7 +8,7 @@
         <nav class="header-container__item header-container__item--left" role="navigation">
             <div class="logo-and-links-menu__logo-container">
                 <a href="{{ url_for('showHotelCategories') }}" class="logo-and-links-menu__yamagata-hotels-link">
-                    <img src="/static/img/basho_logo.svg" alt="Yamagata Hotels" title="Yamagata Hotels" class="logo-and-links-menu__yamagata-hotels-logo">
+                    <img src="/static/img/basho_logo.svg" alt="basho logo" title="basho" class="logo-and-links-menu__yamagata-hotels-logo">
                 </a>
             </div>
             <!-- Use comments to fill white space to prevent extra space between 'inline-block' links -->
