Move profile pic to signin box

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -189,6 +189,7 @@ img {
   display: inline-block;
   font-size: $font-size-base;
   margin-bottom: 0;
+  margin-left: 10px;
   position: relative;
 }
 
