--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,6 +131,7 @@ img {
   display: inline-block;
   font-size: 14px;
   margin-bottom: 0;
+  margin-left: 10px;
   position: relative; }
 
 @-moz-document url-prefix() {
