--- a/templates/header.html
+++ b/templates/header.html
@@ -44,6 +44,17 @@
                         <i class="fa fa-bars fa-2x"></i>
                     </a></li>
             </ul>
+
+            <div class="nav-right visible-xs">
+              <div class="button" id="btn">
+                <div class="bar top"></div>
+                <div class="bar middle"></div>
+                <div class="bar bottom"></div>
+              </div>
+            </div>
+            <!-- nav-right -->
+            <main>
+
         </nav>
     </section>
 </header>
